# ai-shorts-generator

./: .env  .gitignore  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  subtitle.py
generator/: __main__.py  face_detector.py  llm_processor.py  subtitle.py  utils.py  video_processor.py
