[project]
name = "ai-shorts-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "moviepy>=2.1.2",
    "ollama>=0.4.7",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "ultralytics>=8.3.71",
    "whisperx>=3.3.1",
]

[tool.setuptools]
packages = ["generator"]

[tool.setuptools.package-data]
generator = ["assets/*"]
