[project]
name = "ai_shorts_generator" # Changed from ai-shorts-generator
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "moviepy>=2.1.2",
    "ollama>=0.4.7",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "typer",
    "ultralytics>=8.3.71",
    "whisperx>=3.3.1",
    "torch>=2.0.0",
]

[project.optional-dependencies]
cuda = ["torch[cuda]>=2.0.0"]

[project.scripts]
ai-shorts = "generator.cli:main" # Add this section to create an entry point

[tool.setuptools]
packages = ["generator"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
generator = ["assets/fonts/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.pyd", "__pycache__"]
